--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
     <h1 id="temp"></h1>
     <div id="location"></div>
 </div>
+<hr>
+<div>
+    <form id="change-city">
+        <label for="city-name">City</label>
+        <input type="text" id="city-name">
+        <br>
+        <input type="submit" value="Save changes">
+    </form>
+</div>
 <script src="classes/weather.js"></script>
 <script src="classes/UI.js"></script>
 <script src="app.js"></script>
 </body>
-
 </html>
