--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <div id="description"></div>
     <h1 id="temp"></h1>
     <div id="location"></div>
+    <div id="wind-speed"></div>
+    <div id="wind-dir"></div>
+    <div id="pressure"></div>
+    <div id="humidity"></div>
 </div>
 <hr>
 <div>
